Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hextris
  name: hextris
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hextris
  template:
    metadata:
      labels:
        app: hextris
    spec:
      containers:
      - image: beltusproject/hextris:1.0
        name: hextris
        resources: 
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: hextris
  name: hextris-service
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 31253
  selector:
    app: hextris
status:
  loadBalancer: {}


---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: ingress-class-hextris
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hextris
spec:
  defaultBackend:
    service:
      name: hextris-service
      port:
        number: 80

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
        name: nginx-ingress-controller
      args:
      - /nginx-ingress-controller
      - -- configmap=$(POD_NAMESPACE)/nginx-configuration
